base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  replicas: 8
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
  strategy:
    canary:
      canaryService: canary
      stableService: rollouts-demo
      trafficRouting:
        plugins:
          argoproj-labs/openshift:
            routes:
              - canary
      steps:
      - setWeight: 20
      - analysis:
        templates:
        - templateName: canary
        args:
        - name: namespace
          value: rollouts-demo-prod
        - name: route-name
          value: canary-canary
        - name: route-url
          value: canary-canary-rollouts-demo-prod.apps.uthtest1.sandbox694.opentlc.com
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
